--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,6 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/introHCI.css" rel="stylesheet">
 
-</script>        
 </head>
 
 <body>
@@ -27,15 +26,34 @@
 						<img src="images/{{image}}" alt="Lorem Pixel image" class="img-responsive">
 						<h4>{{title}}</h4>
 					</a>
-					<div class="likeCtr"><button class="btn btn-default likeBtn">Like</button></div>
+                    <div class="likeCtr">
+                        {{#if ../min}}
+                            Min! <button onclick="ga('send', 'event','like', 'click')" class="likeBtn">Like</button>
+                        {{else}}
+                            <button onclick="ga('send', 'event','like', 'click')"class="btn btn-default likeBtn">Like</button>
+                        {{/if}}
+                    </div>
 					<div class="details"></div>
 				</div>
 			</div>
 		{{/each}}
 
+    </div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/introHCI.js"></script>
-</body>
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-92540810-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+    </body>
 </html>
